--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>FindMyCook.com</title>
+    <title>Find my Cook</title>
 </head>
 <body>
 
